# ParMETIS

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: config.cmake.in
